--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-API_KEY= 5cd29d752b854d2db2181b011ab8c699
+API_KEY= <your api key from websitebit or some other website where we can get weather report>
